delete Google CSE

--- a/search.html
+++ b/search.html
@@ -34,7 +34,7 @@ permalink: /search/
       })
 </script>
 
-<!-- Script for Google Custom Search -->
+<!-- Script for Google Custom Search
 <script>
   (function() {
     var cx = '001917551734242709439:ztrysjfbirs';
@@ -46,4 +46,4 @@ permalink: /search/
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search>
+<gcse:search></gcse:search> -->
